<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CriticalBugResultAPK</string>
    <string name="hello_world">CriticalBug!</string>
    <string name="action_settings">Settings</string>
    <string name="Number">#</string>
    <string name="Domain">Domain</string>
    <string name="TCID">TCID</string>
    <string name="TCName">TCName</string>
    <string name="AutoType">AutoType</string>
    <string name="ScreenShotURI">ScreenShotURI</string>
    <string name="Result">Result</string>
    
    
    
</resources>
